--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="ShaderPBR.cpp" />
     <ClCompile Include="SceneLoader.cpp" />
+    <ClCompile Include="CubeMap.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h">
@@ -80,6 +81,7 @@
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="ShaderPBR.h" />
     <ClInclude Include="SceneLoader.h" />
+    <ClInclude Include="CubeMap.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Octree2.rc" />
@@ -149,6 +151,12 @@
     <None Include="obj\scene.json">
       <Filter>obj</Filter>
     </None>
+    <None Include="shaders\cubeMap.ver">
+      <Filter>shader</Filter>
+    </None>
+    <None Include="shaders\cubeMap.frag">
+      <Filter>shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -173,6 +181,9 @@
     </Filter>
     <Filter Include="textures">
       <UniqueIdentifier>{02846981-9e96-414b-82e4-a4e7adcd323e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="textures\skybox">
+      <UniqueIdentifier>{fb9e7830-6cf5-40ef-8662-387ca5dd3e9c}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -216,6 +227,24 @@
     </Image>
     <Image Include="textures\EyCkvNyNormal.png">
       <Filter>textures</Filter>
+    </Image>
+    <Image Include="textures\skybox\left.jpg">
+      <Filter>textures\skybox</Filter>
+    </Image>
+    <Image Include="textures\skybox\right.jpg">
+      <Filter>textures\skybox</Filter>
+    </Image>
+    <Image Include="textures\skybox\top.jpg">
+      <Filter>textures\skybox</Filter>
+    </Image>
+    <Image Include="textures\skybox\back.jpg">
+      <Filter>textures\skybox</Filter>
+    </Image>
+    <Image Include="textures\skybox\bottom.jpg">
+      <Filter>textures\skybox</Filter>
+    </Image>
+    <Image Include="textures\skybox\front.jpg">
+      <Filter>textures\skybox</Filter>
     </Image>
   </ItemGroup>
 </Project>
