--- a/Octree2/Octree2.vcxproj
+++ b/Octree2/Octree2.vcxproj
@@ -147,6 +147,7 @@
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Cube.h" />
+    <ClInclude Include="CubeMap.h" />
     <ClInclude Include="EventHandler.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Light.h" />
@@ -172,6 +173,7 @@
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Cube.cpp" />
+    <ClCompile Include="CubeMap.cpp" />
     <ClCompile Include="EventHandler.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Light.cpp" />
@@ -217,6 +219,8 @@
     <None Include="shaders\col.frag">
       <FileType>Document</FileType>
     </None>
+    <None Include="shaders\cubeMap.frag" />
+    <None Include="shaders\cubeMap.ver" />
     <None Include="shaders\debug.frag">
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</DeploymentContent>
       <DeploymentContent Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</DeploymentContent>
@@ -264,6 +268,12 @@
     <Image Include="textures\EyCkvNy.png" />
     <Image Include="textures\EyCkvNyNormal.png" />
     <Image Include="textures\parallax_mapping_height_map.png" />
+    <Image Include="textures\skybox\back.jpg" />
+    <Image Include="textures\skybox\bottom.jpg" />
+    <Image Include="textures\skybox\front.jpg" />
+    <Image Include="textures\skybox\left.jpg" />
+    <Image Include="textures\skybox\right.jpg" />
+    <Image Include="textures\skybox\top.jpg" />
     <Image Include="textures\texture.jpg" />
     <Image Include="textures\texture2.jpg" />
     <Image Include="texture\No-Mans-Sky-1.jpg">
