--- a/Octree2/Octree2.vcxproj.filters
+++ b/Octree2/Octree2.vcxproj.filters
@@ -25,6 +25,7 @@
     <ClCompile Include="SceneLoader.cpp" />
     <ClCompile Include="CubeMap.cpp" />
     <ClCompile Include="FrameBuffer.cpp" />
+    <ClCompile Include="RenderPass.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cube.h">
@@ -80,6 +81,8 @@
     <ClInclude Include="SceneLoader.h" />
     <ClInclude Include="CubeMap.h" />
     <ClInclude Include="FrameBuffer.h" />
+    <ClInclude Include="RenderPass.h" />
+    <ClInclude Include="Common.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Octree2.rc" />
@@ -155,6 +158,12 @@
     <None Include="shaders\cubeMap.frag">
       <Filter>shader</Filter>
     </None>
+    <None Include="shaders\postProcess.frag">
+      <Filter>shader</Filter>
+    </None>
+    <None Include="shaders\postProcess.ver">
+      <Filter>shader</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Text Include="ReadMe.txt" />
@@ -165,6 +174,7 @@
     </Filter>
     <Filter Include="shader">
       <UniqueIdentifier>{37d8621d-ad91-4a86-9241-6ebacfc3e7c5}</UniqueIdentifier>
+      <Extensions>*.ver,*.frag</Extensions>
     </Filter>
     <Filter Include="obj">
       <UniqueIdentifier>{f50fef8e-b6ed-45b2-877f-718b6b9f0566}</UniqueIdentifier>
