All seems to point at a difference between the hader files used in lib build and app build. It's 100% my stupidity

--- a/TetraVisu/TetraVisu.vcxproj
+++ b/TetraVisu/TetraVisu.vcxproj
@@ -154,11 +154,15 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Cam2.h" />
+    <ClInclude Include="Go.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="WindowBuilder.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Cam2.cpp" />
+    <ClCompile Include="Go.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
